--- a/Client/WindowResources/ThemeDictionary.xaml
+++ b/Client/WindowResources/ThemeDictionary.xaml
@@ -25,4 +25,28 @@
         <Setter Property="Foreground" Value="{StaticResource ButtonForeground}"/>
         <Setter Property="Cursor" Value="Hand"/>
     </Style>
+
+    <ControlTemplate x:Key="ButtonTemplate" TargetType="Button">
+        <Border x:Name="border" Background="{StaticResource ButtonBackground}" HorizontalAlignment="Stretch" Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" CornerRadius="5" BorderBrush="#cccccc" BorderThickness="2" Cursor="Hand">
+            <ContentPresenter TextBlock.Foreground="{StaticResource ButtonForeground}" VerticalAlignment="Center" HorizontalAlignment="Center" TextBlock.FontSize="18"/>
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="border" Property="Background" Value="Red"/>
+                <Setter TargetName="border" Property="BorderBrush" Value="Black"/>
+            </Trigger>
+
+            <Trigger Property="IsPressed" Value="True">
+                <Setter TargetName="border" Property="Background" Value="Green"/>
+                <Setter TargetName="border" Property="BorderBrush" Value="Black"/>
+            </Trigger>
+
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter TargetName="border" Property="Background" Value="Yellow"/>
+                <Setter TargetName="border" Property="BorderBrush" Value="Black"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
 </ResourceDictionary>
